--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "963511ce-ab89-4d13-83d6-4eba58c7511a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
